# smvr

./: Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  nightly.yml  release-drafter.yml
src/: error.rs  lib.rs  version.rs
src/component/: build_metadata.rs  mod.rs  part.rs  prerelease.rs
src/dialect/: mod.rs  standard.rs
